2003-10-24  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_offline.erl: Added function remove_old_messages/1

	* src/mod_last.erl: jabber:iq:last support (JEP-0012)
	* src/ejabberd_sm.erl: Likewise

	* src/jlib.hrl: Added NS_LAST macros

2003-10-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_logger_h.erl: New error_logger handler
	* src/ejabberd_app.erl: Now uses ejabberd_logger_h.erl

2003-10-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/Makefile.in: Added install rule

	* src/jlib.erl: Added checks for JID parts length

2003-10-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_vcard.erl: Added checks for stringprep results

	* src/expat_erl.c: Workaround for EI encode_string bug

	* src/xml_stream.erl: Slightly changed protocol to expat driver
	* src/expat_erl.c: Likewise

	* src/mod_configure.erl: Minor fix

2003-10-19  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Fixed typo

	* src/ejabberd_local.erl: Added support for announce/online
	messages

	* src/ejabberd.cfg.example: Updated

	* src/mod_register.erl: Added support for sending registration
	notifications

2003-10-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_service.erl: Added supports for multiple hosts per
	service

	* src/Makefile.in: Minor fix

2003-10-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/configure.ac: Build system now done using autoconf (thanks
	to Balabanov Dmitry)
	* src/aclocal.m4: Likewise
	* src/**/Makefile.in: Likewise

	* src/mod_roster.erl (process_item_set_t): Slightly improved
	performance

	* src/jd2ejd.erl: Added missed closing of XML stream process,
	removed timeout value from import_file/1

	* src/ejabberd_auth.erl: Added checks for invalid user name

2003-10-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_configure.erl: Fixed some error codes

	* src/cyrsasl_digest.erl: Bugfix (thanks to Justin Karneges)

2003-10-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_local.erl: Bugfix
