@@ -1,3 +1,7 @@
+2003-10-27  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_logger_h.erl: Added support for log rotation
+
 2003-10-24  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_offline.erl: Added function remove_old_messages/1
